--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "typings-install": "typings install",
     "postinstall": "npm run typings-install",
-    "build": "webpack --inline --colors --progress --display-error-details --display-cached",
+    "build": "webpack --inline --colors --progress --display-error-details --display-cached && cp src/index.html dist/index.html",
     "watch": "npm run build -- --watch",
     "server": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 5000  --content-base src",
     "start": "npm run server"
