--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
   "license": "MIT",
   "devDependencies": {
     "awesome-typescript-loader": "~0.16.2",
+    "copy-webpack-plugin": "^3.0.1",
     "css-loader": "~0.23.1",
     "es6-promise": "3.0.2",
     "es6-shim": "0.35.0",
     "file-loader": "^0.8.5",
     "gulp-angular2-embed-sass": "^0.1.0",
+    "html-webpack-plugin": "^2.21.0",
     "node-sass": "^3.7.0",
     "postcss": "^5.0.21",
     "postcss-loader": "~0.9.1",
     "precss": "^1.4.0",
+    "raw-loader": "^0.5.1",
     "reflect-metadata": "0.1.2",
     "sass-loader": "^3.2.0",
     "source-map-loader": "^0.1.5",
