Trying out some more ways to connect to elastic

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@angular2-material/toolbar": "^2.0.0-alpha.5",
     "angular2-materialize": "^3.0.0",
     "core-js": "^2.2.0",
+    "elasticsearch": "^11.0.1",
     "firebase": "^3.0.5",
     "imports-loader": "^0.6.5",
     "materialize-css": "^0.97.6",
@@ -70,6 +71,11 @@
   "keywords": [
     "SCVO"
   ],
+  "overrides": {
+      "elasticsearch": {
+          "main": "elasticsearch.angular.js"
+      }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/scvodigital/platform-frontend.git"
