--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "core-js": "^2.2.0",
     "elasticsearch": "^11.0.1",
     "firebase": "^3.0.5",
+    "hammerjs": "^2.0.8",
     "imports-loader": "^0.6.5",
     "jquery": "^3.0.0",
     "materialize-css": "^0.97.6",
