--- a/package.json
+++ b/package.json
@@ -14,32 +14,6 @@
         "Calum MacÙisdean <calum.macuisdean@gmail.com>"
     ],
     "license": "MIT",
-    "devDependencies": {
-        "awesome-typescript-loader": "1.1.1",
-        "copy-webpack-plugin": "^3.0.1",
-        "css-loader": "^0.23.1",
-        "es6-promise": "^3.2.1",
-        "es6-shim": "^0.35.1",
-        "file-loader": "^0.9.0",
-        "gulp-angular2-embed-sass": "^0.1.0",
-        "html-webpack-plugin": "^2.21.0",
-        "node-sass": "^3.8.0",
-        "postcss": "^5.0.21",
-        "postcss-loader": "~0.9.1",
-        "precss": "^1.4.0",
-        "raw-loader": "^0.5.1",
-        "reflect-metadata": "^0.1.3",
-        "sass-loader": "^4.0.0",
-        "source-map-loader": "^0.1.5",
-        "style-loader": "^0.13.1",
-        "typescript": "~1.8.10",
-        "typings": "^1.3.1",
-        "url-loader": "^0.5.7",
-        "raw-loader": "^0.5.1",
-        "webpack": "^1.13.1",
-        "webpack-dev-server": "^1.14.1",
-        "webpack-merge": "^0.14.0"
-    },
     "dependencies": {
         "@angular/common": "2.0.0-rc.4",
         "@angular/compiler": "2.0.0-rc.4",
@@ -48,32 +22,59 @@
         "@angular/http": "2.0.0-rc.4",
         "@angular/platform-browser": "2.0.0-rc.4",
         "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-        "@angular/platform-server": "2.0.0-rc.4",
-        "@angular/router": "3.0.0-alpha.7",
-        "@angular2-material/button": "^2.0.0-alpha.5",
-        "@angular2-material/card": "^2.0.0-alpha.5",
-        "@angular2-material/checkbox": "^2.0.0-alpha.5",
-        "@angular2-material/core": "^2.0.0-alpha.5",
-        "@angular2-material/input": "^2.0.0-alpha.5",
-        "@angular2-material/list": "^2.0.0-alpha.5",
-        "@angular2-material/progress-bar": "^2.0.0-alpha.5",
-        "@angular2-material/progress-circle": "^2.0.0-alpha.5",
-        "@angular2-material/radio": "^2.0.0-alpha.5",
-        "@angular2-material/sidenav": "^2.0.0-alpha.5",
-        "@angular2-material/toolbar": "^2.0.0-alpha.5",
+        "@angular/router": "3.0.0-beta.2",
+        "angulartics2": "^1.1.1",
         "angular2-materialize": "^3.0.0",
         "materialize-css": "^0.97.6",
         "angulartics2": "^1.1.1",
         "node-sass": "^3.8.0",
         "sass-loader": "^4.0.0",
-        "core-js": "^2.2.0",
-        "elasticsearch": "^11.0.1",
-        "firebase": "^3.0.5",
         "hammerjs": "^2.0.8",
         "imports-loader": "^0.6.5",
-        "jquery": "^3.0.0",
+        "body-parser": "~1.13.2",
+        "buffer": "^4.6.0",
+        "core-js": "^2.4.0",
+        "debug": "^2.2.0",
+        "reflect-metadata": "^0.1.3",
         "rxjs": "5.0.0-beta.6",
-        "zone.js": "~0.6.12"
+        "serve-favicon": "~2.3.0",
+        "systemjs": "0.19.27",
+        "zone.js": "^0.6.12"
+    },
+    "devDependencies": {
+        "aurelia-polyfills": "^0.1.2",
+        "awesome-typescript-loader": "1.1.1",
+        "concurrently": "^2.0.0",
+        "copy-webpack-plugin": "^3.0.1",
+        "cors": "^2.7.1",
+        "crypto-browserify": "^3.11.0",
+        "css-loader": "^0.23.1",
+        "elasticsearch": "^11.0.1",
+        "es6-promise": "^3.2.1",
+        "es6-shim": "^0.35.1",
+        "file-loader": "^0.9.0",
+        "firebase": "^3.0.5",
+        "html-entities": "^1.2.0",
+        "html-webpack-plugin": "^2.21.0",
+        "jquery": "^3.1.0",
+        "markdown": "^0.5.0",
+        "node-libs-browser": "^1.0.0",
+        "node-sass": "^3.8.0",
+        "postcss": "^5.0.21",
+        "postcss-loader": "~0.9.1",
+        "precss": "^1.4.0",
+        "raw-loader": "^0.5.1",
+        "sass-loader": "^4.0.0",
+        "source-map-loader": "^0.1.5",
+        "string": "^3.3.1",
+        "style-loader": "^0.13.1",
+        "to-markdown": "^3.0.0",
+        "typescript": "^1.8.10",
+        "typings": "^1.3.1",
+        "url-loader": "^0.5.7",
+        "webpack": "^1.13.1",
+        "webpack-dev-server": "^1.14.1",
+        "webpack-merge": "^0.14.0"
     },
     "keywords": [
         "SCVO"
