Trying to improve search

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "scvo",
-    "version": "0.2.1",
+    "version": "0.2.2",
     "description": "SCVO Platform Frontend",
     "scripts": {
         "typings-install": "typings install",
@@ -11,7 +11,7 @@
         "start": "npm run server"
     },
     "contributors": [
-        "Calum MacÙisdean <calum.macuisdean@gmail.com>"
+        "Calum MacÙisdean <calum.macuisdean@scvo.org.uk>"
     ],
     "license": "MIT",
     "dependencies": {
