Fixed Sass loading issue and rearranged loads of files

--- a/package.json
+++ b/package.json
@@ -1,95 +1,95 @@
 {
-    "name": "scvo",
-    "version": "0.2.2",
-    "description": "SCVO Platform Frontend",
-    "scripts": {
-        "typings-install": "typings install",
-        "postinstall": "npm run typings-install",
-        "build": "webpack --inline --colors --progress --display-error-details --display-cached && cp src/index.html dist/index.html",
-        "watch": "npm run build -- --watch",
-        "server": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 2000  --content-base src",
-        "start": "npm run server"
-    },
-    "contributors": [
-        "Calum MacÙisdean <calum.macuisdean@scvo.org.uk>"
-    ],
-    "license": "MIT",
-    "dependencies": {
-        "@angular/common": "2.0.0-rc.4",
-        "@angular/compiler": "2.0.0-rc.4",
-        "@angular/core": "2.0.0-rc.4",
-        "@angular/forms": "0.2.0",
-        "@angular/http": "2.0.0-rc.4",
-        "@angular/platform-browser": "2.0.0-rc.4",
-        "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-        "@angular/router": "3.0.0-beta.2",
-        "angulartics2": "^1.1.1",
-        "angular2-materialize": "^3.0.0",
-        "materialize-css": "^0.97.6",
-        "angulartics2": "^1.1.1",
-        "node-sass": "^3.8.0",
-        "sass-loader": "^4.0.0",
-        "hammerjs": "^2.0.8",
-        "imports-loader": "^0.6.5",
-        "body-parser": "~1.13.2",
-        "buffer": "^4.6.0",
-        "core-js": "^2.4.0",
-        "debug": "^2.2.0",
-        "reflect-metadata": "^0.1.3",
-        "rxjs": "5.0.0-beta.6",
-        "serve-favicon": "~2.3.0",
-        "systemjs": "0.19.27",
-        "zone.js": "^0.6.12"
-    },
-    "devDependencies": {
-        "aurelia-polyfills": "^0.1.2",
-        "awesome-typescript-loader": "1.1.1",
-        "concurrently": "^2.0.0",
-        "copy-webpack-plugin": "^3.0.1",
-        "cors": "^2.7.1",
-        "crypto-browserify": "^3.11.0",
-        "css-loader": "^0.23.1",
-        "elasticsearch": "^11.0.1",
-        "es6-promise": "^3.2.1",
-        "es6-shim": "^0.35.1",
-        "file-loader": "^0.9.0",
-        "firebase": "^3.0.5",
-        "html-entities": "^1.2.0",
-        "html-webpack-plugin": "^2.21.0",
-        "jquery": "^3.1.0",
-        "markdown": "^0.5.0",
-        "node-libs-browser": "^1.0.0",
-        "node-sass": "^3.8.0",
-        "postcss": "^5.0.21",
-        "postcss-loader": "~0.9.1",
-        "precss": "^1.4.0",
-        "raw-loader": "^0.5.1",
-        "sass-loader": "^4.0.0",
-        "source-map-loader": "^0.1.5",
-        "string": "^3.3.1",
-        "style-loader": "^0.13.1",
-        "to-markdown": "^3.0.0",
-        "typescript": "^1.8.10",
-        "typings": "^1.3.1",
-        "url-loader": "^0.5.7",
-        "webpack": "^1.13.1",
-        "webpack-dev-server": "^1.14.1",
-        "webpack-merge": "^0.14.0"
-    },
-    "keywords": [
-        "SCVO"
-    ],
-    "overrides": {
-        "elasticsearch": {
-            "main": "elasticsearch.angular.js"
-        }
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/scvodigital/platform-frontend.git"
-    },
-    "bugs": {
-        "url": "https://github.com/scvodigital/platform-frontend/issues"
-    },
-    "homepage": "https://github.com/scvodigital/platform-frontend#readme"
+  "name": "scvo",
+  "version": "0.2.2",
+  "description": "SCVO Platform Frontend",
+  "scripts": {
+    "typings-install": "typings install",
+    "postinstall": "npm run typings-install",
+    "build": "webpack --inline --colors --progress --display-error-details --display-cached && cp src/index.html dist/index.html",
+    "watch": "npm run build -- --watch",
+    "server": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 2000  --content-base src",
+    "start": "npm run server"
+  },
+  "contributors": [
+    "Calum MacÙisdean <calum.macuisdean@scvo.org.uk>"
+  ],
+  "license": "MIT",
+  "dependencies": {
+    "@angular/common": "2.0.0-rc.4",
+    "@angular/compiler": "2.0.0-rc.4",
+    "@angular/core": "2.0.0-rc.4",
+    "@angular/forms": "0.2.0",
+    "@angular/http": "2.0.0-rc.4",
+    "@angular/platform-browser": "2.0.0-rc.4",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
+    "@angular/router": "3.0.0-beta.2",
+    "angular2-materialize": "^3.0.0",
+    "angulartics2": "^1.1.1",
+    "body-parser": "~1.13.2",
+    "buffer": "^4.6.0",
+    "core-js": "^2.4.0",
+    "debug": "^2.2.0",
+    "hammerjs": "^2.0.8",
+    "imports-loader": "^0.6.5",
+    "materialize-css": "^0.97.6",
+    "node-sass": "^3.8.0",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "5.0.0-beta.6",
+    "sass-loader": "^4.0.0",
+    "serve-favicon": "~2.3.0",
+    "systemjs": "0.19.27",
+    "to-string-loader": "^1.1.4",
+    "zone.js": "^0.6.12"
+  },
+  "devDependencies": {
+    "aurelia-polyfills": "^0.1.2",
+    "awesome-typescript-loader": "1.1.1",
+    "concurrently": "^2.0.0",
+    "copy-webpack-plugin": "^3.0.1",
+    "cors": "^2.7.1",
+    "crypto-browserify": "^3.11.0",
+    "css-loader": "^0.23.1",
+    "elasticsearch": "^11.0.1",
+    "es6-promise": "^3.2.1",
+    "es6-shim": "^0.35.1",
+    "file-loader": "^0.9.0",
+    "firebase": "^3.0.5",
+    "html-entities": "^1.2.0",
+    "html-webpack-plugin": "^2.21.0",
+    "jquery": "^3.1.0",
+    "markdown": "^0.5.0",
+    "node-libs-browser": "^1.0.0",
+    "node-sass": "^3.8.0",
+    "postcss": "^5.0.21",
+    "postcss-loader": "~0.9.1",
+    "precss": "^1.4.0",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^4.0.0",
+    "source-map-loader": "^0.1.5",
+    "string": "^3.3.1",
+    "style-loader": "^0.13.1",
+    "to-markdown": "^3.0.0",
+    "typescript": "^1.8.10",
+    "typings": "^1.3.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-merge": "^0.14.0"
+  },
+  "keywords": [
+    "SCVO"
+  ],
+  "overrides": {
+    "elasticsearch": {
+      "main": "elasticsearch.angular.js"
+    }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/scvodigital/platform-frontend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/scvodigital/platform-frontend/issues"
+  },
+  "homepage": "https://github.com/scvodigital/platform-frontend#readme"
 }
