--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scvo",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "SCVO Platform Frontend",
   "scripts": {
     "typings-install": "typings install",
@@ -24,7 +24,7 @@
     "@angular/platform-browser-dynamic": "2.0.0-rc.4",
     "@angular/router": "3.0.0-beta.2",
     "angular2-materialize": "^3.0.0",
-    "angulartics2": "^1.1.1",
+    "angulartics2": "^1.1.2",
     "body-parser": "~1.13.2",
     "buffer": "^4.6.0",
     "core-js": "^2.4.0",
@@ -52,6 +52,7 @@
     "elasticsearch": "^11.0.1",
     "es6-promise": "^3.2.1",
     "es6-shim": "^0.35.1",
+    "favicons-webpack-plugin": "0.0.6",
     "file-loader": "^0.9.0",
     "firebase": "^3.0.5",
     "html-entities": "^1.2.0",
