--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "hammerjs": "^2.0.8",
     "imports-loader": "^0.6.5",
     "materialize-css": "^0.97.6",
+    "ng2-slim-loading-bar": "^1.3.0",
     "node-sass": "^3.8.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
