--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,12 @@
 language: node_js
 node_js:
-  - "0.10"
+  - "6.2"
 
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - npm install -g webpack webpack-dev-server typings typescript
+  - npm install -g webpack webpack-dev-server typings typescript firebase-tools
   - npm install
-  - npm run typings-install
-  - npm install -g firebase-tools
   - echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
 
 script:
