--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "imports-loader": "^0.6.5",
     "materialize-css": "^0.97.6",
     "ng2-breadcrumb": "^0.2.0",
-    "ng2-slim-loading-bar": "^1.3.0",
+    "ng2-slim-loading-bar": "1.3.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "serve-favicon": "~2.3.0",
