--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scvo",
-  "version": "0.2.3",
+  "version": "0.2.5",
   "description": "SCVO Platform Frontend",
   "scripts": {
     "typings-install": "typings install",
@@ -15,16 +15,17 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/forms": "0.2.0",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "@angular/router": "3.0.0-beta.2",
+    "@angular/common": "^2.0.0-rc.5",
+    "@angular/compiler": "^2.0.0-rc.5",
+    "@angular/core": "^2.0.0-rc.5",
+    "@angular/forms": "^0.3.0",
+    "@angular/http": "^2.0.0-rc.5",
+    "@angular/platform-browser": "^2.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.5",
+    "@angular/router": "^3.0.0-beta.2",
     "angular2-materialize": "^3.0.0",
-    "angulartics2": "^1.1.2",
+    "angularfire2": "^2.0.0-beta.3-pre2",
+    "angulartics2": "^1.1.1",
     "body-parser": "~1.13.2",
     "buffer": "^4.6.0",
     "core-js": "^2.4.0",
