--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,16 @@
 {
     "compilerOptions": {
+        "target": "ES5",
         "module": "commonjs",
-        "target": "es5",
-        "outDir": "dist",
-        "rootDir": ".",
-        "sourceMap": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "moduleResolution": "node"
+        "sourceMap": true,
+        "suppressImplicitAnyIndexErrors":true
     },
     "exclude": [
-        "typings/main.d.ts",
-        "typings/main",
-        "node_modules"
+        "node_modules",
+        "dist"
     ],
     "compileOnSave": false,
-    "buildOnSave": false,
-    "atom": { "rewriteTsconfig": false }
+    "buildOnSave": false
 }
