--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "angular2-materialize": "^3.0.0",
     "angularfire2": "^2.0.0-beta.3-pre2",
     "angulartics2": "^1.1.1",
-    "body-parser": "~1.13.2",
+    "body-parser": "^1.15.2",
     "buffer": "^4.6.0",
     "core-js": "^2.4.0",
     "debug": "^2.2.0",
@@ -38,12 +38,12 @@
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "serve-favicon": "~2.3.0",
-    "systemjs": "0.19.27",
+    "systemjs": "^0.19.36",
     "to-string-loader": "^1.1.4",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
-    "aurelia-polyfills": "^0.1.2",
+    "aurelia-polyfills": "^1.0.0",
     "awesome-typescript-loader": "1.1.1",
     "concurrently": "^2.0.0",
     "copy-webpack-plugin": "^3.0.1",
@@ -63,7 +63,7 @@
     "node-libs-browser": "^1.0.0",
     "node-sass": "^3.8.0",
     "postcss": "^5.0.21",
-    "postcss-loader": "~0.9.1",
+    "postcss-loader": "^0.10.0",
     "precss": "^1.4.0",
     "raw-loader": "^0.5.1",
     "sass-loader": "^4.0.0",
