Updated readme to reflect new repo name

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scvo",
   "version": "0.2.5",
-  "description": "SCVO Platform Frontend",
+  "description": "SCVO Website Frontend",
   "scripts": {
     "typings-install": "typings install",
     "postinstall": "npm run typings-install",
