--- a/.travis.yml
+++ b/.travis.yml
@@ -4,19 +4,18 @@ branches:
   - master
 
 node_js:
-  - "6.2"
+  - "6.9"
 
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - npm install --global webpack webpack-dev-server typings typescript firebase-tools
+  - npm install --global typescript firebase-tools @angular/cli
   - npm install
   - echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
 
 script:
   - npm run build
   - firebase deploy --project scvo-frontend --token ${FIREBASE_TOKEN}
-  - firebase deploy --project platform-frontend --token ${FIREBASE_TOKEN}
 
 notifications:
   slack: scvodigital:BPrM2dvC1icb0UHwglQ5DBfI
