--- a/package.json
+++ b/package.json
@@ -1,97 +1,87 @@
 {
-  "name": "scvo",
-  "version": "0.2.5",
-  "description": "SCVO Website Frontend",
-  "scripts": {
-    "typings-install": "typings install",
-    "postinstall": "npm run typings-install",
-    "build": "webpack --inline --colors --progress --display-error-details --display-cached && cp src/index.html dist/index.html",
-    "watch": "npm run build -- --watch",
-    "server": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 2000  --content-base src",
-    "start": "npm run server"
-  },
-  "contributors": [
-    "Calum MacÙisdean <calum.macuisdean@scvo.org.uk>"
-  ],
-  "license": "MIT",
-  "dependencies": {
-    "@angular/common": "^2.0.0-rc.5",
-    "@angular/compiler": "^2.0.0-rc.5",
-    "@angular/core": "^2.0.0-rc.5",
-    "@angular/forms": "^0.3.0",
-    "@angular/http": "^2.0.0-rc.5",
-    "@angular/platform-browser": "^2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.5",
-    "@angular/router": "^3.0.0-beta.2",
-    "angular2-materialize": "^3.0.0",
-    "angularfire2": "^2.0.0-beta.3-pre2",
-    "angulartics2": "^1.1.1",
-    "body-parser": "^1.15.2",
-    "buffer": "^4.6.0",
-    "core-js": "^2.4.0",
-    "debug": "^2.2.0",
-    "hammerjs": "^2.0.8",
-    "imports-loader": "^0.6.5",
-    "materialize-css": "^0.97.6",
-    "ng2-breadcrumb": "^0.2.0",
-    "ng2-slim-loading-bar": "1.3.0",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "serve-favicon": "~2.3.0",
-    "systemjs": "^0.19.36",
-    "to-string-loader": "^1.1.4",
-    "zone.js": "^0.6.12"
-  },
-  "devDependencies": {
-    "aurelia-polyfills": "^1.0.0",
-    "awesome-typescript-loader": "1.1.1",
-    "concurrently": "^2.0.0",
-    "copy-webpack-plugin": "^3.0.1",
-    "cors": "^2.7.1",
-    "crypto-browserify": "^3.11.0",
-    "css-loader": "^0.23.1",
-    "elasticsearch": "^11.0.1",
-    "es6-promise": "^3.2.1",
-    "es6-shim": "^0.35.1",
-    "favicons-webpack-plugin": "0.0.6",
-    "file-loader": "^0.9.0",
-    "firebase": "^3.0.5",
-    "html-entities": "^1.2.0",
-    "html-webpack-plugin": "^2.21.0",
-    "jquery": "^3.1.0",
-    "markdown": "^0.5.0",
-    "node-libs-browser": "^1.0.0",
-    "node-sass": "^3.8.0",
-    "postcss": "^5.0.21",
-    "postcss-loader": "^0.10.0",
-    "precss": "^1.4.0",
-    "raw-loader": "^0.5.1",
-    "sass-loader": "^4.0.0",
-    "source-map-loader": "^0.1.5",
-    "string": "^3.3.1",
-    "style-loader": "^0.13.1",
-    "to-markdown": "^3.0.0",
-    "typescript": "^1.8.10",
-    "typings": "^1.3.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-merge": "^0.14.0"
-  },
-  "keywords": [
-    "SCVO"
-  ],
-  "overrides": {
-    "elasticsearch": {
-      "main": "elasticsearch.angular.js"
-    }
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/scvodigital/platform-frontend.git"
-  },
-  "bugs": {
-    "url": "https://github.com/scvodigital/platform-frontend/issues"
-  },
-  "homepage": "https://github.com/scvodigital/platform-frontend#readme"
+    "name": "scvo-frontend",
+    "version": "0.3.0",
+    "description": "SCVO Website",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve -p 2000",
+        "lint": "tslint \"src/**/*.ts\" --project src/tsconfig.json --type-check && tslint \"e2e/**/*.ts\" --project e2e/tsconfig.json --type-check",
+        "test": "ng test",
+        "build": "rm -rf ./dist && ng build --prod --env=prod",
+        "deploy": "npm run build && npm run firebase-deploy",
+        "firebase-deploy": "firebase deploy --project digital-participation-charter",
+        "pree2e": "webdriver-manager update --standalone false --gecko false",
+        "e2e": "protractor"
+    },
+    "contributors": [
+        "Calum MacÙisdean <calum.macuisdean@scvo.org.uk>"
+    ],
+    "license": "MIT",
+    "dependencies": {
+        "@angular/cli": "^1.0.0-rc.0",
+        "@angular/common": "^2.4.9",
+        "@angular/compiler": "^2.4.9",
+        "@angular/core": "^2.4.9",
+        "@angular/forms": "^2.4.9",
+        "@angular/http": "^2.4.9",
+        "@angular/platform-browser": "^2.4.9",
+        "@angular/platform-browser-dynamic": "^2.4.9",
+        "@angular/router": "^3.4.9",
+        "@ngtools/webpack": "^1.2.12",
+        "@types/elasticsearch": "^5.0.13",
+        "@types/headroom": "^0.7.30",
+        "@types/jquery": "^2.0.40",
+        "@types/lodash": "^4.14.54",
+        "@types/materialize-css": "^0.98.0",
+        "angular2-materialize": "^6.7.1",
+        "angularfire2": "^2.0.0-beta.8",
+        "core-js": "^2.4.1",
+        "elasticsearch": "^12.1.3",
+        "firebase": "^3.7.0",
+        "headroom.js": "^0.9.3",
+        "jquery": "^3.1.1",
+        "markdown-to-html-pipe": "^1.2.0",
+        "materialize-css": "^0.98.0",
+        "rxjs": "5.2.0",
+        "showdown": "^1.6.4",
+        "ts-helpers": "^1.1.2",
+        "zone.js": "^0.7.7",
+        "body-parser": "^1.17.1",
+        "buffer": "^5.0.5",
+        "ng2-breadcrumb": "^0.5.6",
+        "ng2-slim-loading-bar": "2.4.0",
+        "reflect-metadata": "^0.1.10",
+        "serve-favicon": "~2.4.1",
+        "to-string-loader": "^1.1.5"
+    },
+    "devDependencies": {
+        "@angular/cli": "1.0.0-rc.1",
+        "@angular/compiler-cli": "^2.4.9",
+        "@types/core-js": "^0.9.35",
+        "@types/jasmine": "2.5.43",
+        "@types/node": "~7.0.5",
+        "codelyzer": "~3.0.0-beta.3",
+        "jasmine-core": "2.5.2",
+        "jasmine-spec-reporter": "3.2.0",
+        "karma": "1.5.0",
+        "karma-chrome-launcher": "^2.0.0",
+        "karma-cli": "^1.0.1",
+        "karma-jasmine": "^1.1.0",
+        "karma-remap-istanbul": "^0.6.0",
+        "protractor": "~5.1.1",
+        "ts-node": "2.1.0",
+        "tslint": "^4.5.1",
+        "typescript": "^2.2.1"
+    },
+    "keywords": [
+        "SCVO"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/scvodigital/scvo-frontend.git"
+    },
+    "bugs": {
+        "url": "https://github.com/scvodigital/scvo-frontend/issues"
+    },
+    "homepage": "https://github.com/scvodigital/scvo-frontend#readme"
 }
