--- a/package.json
+++ b/package.json
@@ -1,87 +1,88 @@
 {
-    "name": "scvo-frontend",
-    "version": "0.3.0",
-    "description": "SCVO Website",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve -p 2000",
-        "lint": "tslint \"src/**/*.ts\" --project src/tsconfig.json --type-check && tslint \"e2e/**/*.ts\" --project e2e/tsconfig.json --type-check",
-        "test": "ng test",
-        "build": "rm -rf ./dist && ng build --prod --env=prod",
-        "deploy": "npm run build && npm run firebase-deploy",
-        "firebase-deploy": "firebase deploy --project digital-participation-charter",
-        "pree2e": "webdriver-manager update --standalone false --gecko false",
-        "e2e": "protractor"
-    },
-    "contributors": [
-        "Calum MacÙisdean <calum.macuisdean@scvo.org.uk>"
-    ],
-    "license": "MIT",
-    "dependencies": {
-        "@angular/cli": "^1.0.0-rc.0",
-        "@angular/common": "^2.4.9",
-        "@angular/compiler": "^2.4.9",
-        "@angular/core": "^2.4.9",
-        "@angular/forms": "^2.4.9",
-        "@angular/http": "^2.4.9",
-        "@angular/platform-browser": "^2.4.9",
-        "@angular/platform-browser-dynamic": "^2.4.9",
-        "@angular/router": "^3.4.9",
-        "@ngtools/webpack": "^1.2.12",
-        "@types/elasticsearch": "^5.0.13",
-        "@types/headroom": "^0.7.30",
-        "@types/jquery": "^2.0.40",
-        "@types/lodash": "^4.14.55",
-        "@types/materialize-css": "^0.98.0",
-        "angular2-materialize": "^6.7.1",
-        "angularfire2": "^2.0.0-beta.8",
-        "core-js": "^2.4.1",
-        "elasticsearch": "^12.1.3",
-        "firebase": "^3.7.1",
-        "headroom.js": "^0.9.3",
-        "jquery": "^3.1.1",
-        "markdown-to-html-pipe": "^1.2.0",
-        "materialize-css": "^0.98.0",
-        "rxjs": "5.2.0",
-        "showdown": "^1.6.4",
-        "ts-helpers": "^1.1.2",
-        "zone.js": "^0.7.8",
-        "body-parser": "^1.17.1",
-        "buffer": "^5.0.5",
-        "ng2-breadcrumb": "^0.5.6",
-        "ng2-slim-loading-bar": "2.4.0",
-        "reflect-metadata": "^0.1.10",
-        "serve-favicon": "~2.4.1",
-        "to-string-loader": "^1.1.5"
-    },
-    "devDependencies": {
-        "@angular/cli": "1.0.0-rc.1",
-        "@angular/compiler-cli": "^2.4.9",
-        "@types/core-js": "^0.9.36",
-        "@types/jasmine": "2.5.44",
-        "@types/node": "~7.0.8",
-        "codelyzer": "~3.0.0-beta.3",
-        "jasmine-core": "2.5.2",
-        "jasmine-spec-reporter": "3.2.0",
-        "karma": "1.5.0",
-        "karma-chrome-launcher": "^2.0.0",
-        "karma-cli": "^1.0.1",
-        "karma-jasmine": "^1.1.0",
-        "karma-remap-istanbul": "^0.6.0",
-        "protractor": "~5.1.1",
-        "ts-node": "2.1.0",
-        "tslint": "^4.5.1",
-        "typescript": "^2.2.1"
-    },
-    "keywords": [
-        "SCVO"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/scvodigital/scvo-frontend.git"
-    },
-    "bugs": {
-        "url": "https://github.com/scvodigital/scvo-frontend/issues"
-    },
-    "homepage": "https://github.com/scvodigital/scvo-frontend#readme"
+  "name": "scvo-frontend",
+  "version": "0.3.0",
+  "description": "SCVO Website",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve -p 2000",
+    "lint": "tslint \"src/**/*.ts\" --project src/tsconfig.json --type-check && tslint \"e2e/**/*.ts\" --project e2e/tsconfig.json --type-check",
+    "test": "ng test",
+    "build": "rm -rf ./dist && ng build --prod --env=prod",
+    "deploy": "npm run build && npm run firebase-deploy",
+    "firebase-deploy": "firebase deploy --project digital-participation-charter",
+    "pree2e": "webdriver-manager update --standalone false --gecko false",
+    "e2e": "protractor"
+  },
+  "contributors": [
+    "Calum MacÙisdean <calum.macuisdean@scvo.org.uk>"
+  ],
+  "license": "MIT",
+  "dependencies": {
+    "@angular/cli": "^1.0.0-rc.0",
+    "@angular/common": "^2.4.9",
+    "@angular/compiler": "^2.4.9",
+    "@angular/core": "^2.4.9",
+    "@angular/forms": "^2.4.9",
+    "@angular/http": "^2.4.9",
+    "@angular/platform-browser": "^2.4.9",
+    "@angular/platform-browser-dynamic": "^2.4.9",
+    "@angular/router": "^3.4.9",
+    "@ngtools/webpack": "^1.2.13",
+    "@types/elasticsearch": "^5.0.13",
+    "@types/headroom": "^0.7.30",
+    "@types/jquery": "^2.0.41",
+    "@types/lodash": "^4.14.55",
+    "@types/materialize-css": "^0.98.0",
+    "angular2-materialize": "^6.7.2",
+    "angularfire2": "^2.0.0-beta.8",
+    "angulartics2": "^1.6.4",
+    "body-parser": "^1.17.1",
+    "buffer": "^5.0.5",
+    "core-js": "^2.4.1",
+    "elasticsearch": "^12.1.3",
+    "firebase": "^3.7.1",
+    "headroom.js": "^0.9.3",
+    "jquery": "^3.1.1",
+    "markdown-to-html-pipe": "^1.2.0",
+    "materialize-css": "^0.98.0",
+    "ng2-breadcrumb": "^0.5.6",
+    "ng2-slim-loading-bar": "2.4.0",
+    "reflect-metadata": "^0.1.10",
+    "rxjs": "5.2.0",
+    "serve-favicon": "~2.4.1",
+    "showdown": "^1.6.4",
+    "to-string-loader": "^1.1.5",
+    "ts-helpers": "^1.1.2",
+    "zone.js": "^0.8.1"
+  },
+  "devDependencies": {
+    "@angular/cli": "1.0.0-rc.2",
+    "@angular/compiler-cli": "^2.4.9",
+    "@types/core-js": "^0.9.37",
+    "@types/jasmine": "2.5.45",
+    "@types/node": "~7.0.8",
+    "codelyzer": "~3.0.0-beta.3",
+    "jasmine-core": "2.5.2",
+    "jasmine-spec-reporter": "3.2.0",
+    "karma": "1.5.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-remap-istanbul": "^0.6.0",
+    "protractor": "~5.1.1",
+    "ts-node": "2.1.0",
+    "tslint": "^4.5.1",
+    "typescript": "^2.2.1"
+  },
+  "keywords": [
+    "SCVO"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/scvodigital/scvo-frontend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/scvodigital/scvo-frontend/issues"
+  },
+  "homepage": "https://github.com/scvodigital/scvo-frontend#readme"
 }
