--- a/package.json
+++ b/package.json
@@ -18,20 +18,19 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@angular/cli": "^1.0.0-rc.0",
-    "@angular/common": "^2.4.9",
-    "@angular/compiler": "^2.4.9",
-    "@angular/core": "^2.4.9",
-    "@angular/forms": "^2.4.9",
-    "@angular/http": "^2.4.9",
-    "@angular/platform-browser": "^2.4.9",
-    "@angular/platform-browser-dynamic": "^2.4.9",
-    "@angular/router": "^3.4.9",
-    "@ngtools/webpack": "^1.2.13",
+    "@angular/common": "^4.0.1",
+    "@angular/compiler": "^4.0.1",
+    "@angular/core": "^4.0.1",
+    "@angular/forms": "^4.0.1",
+    "@angular/http": "^4.0.1",
+    "@angular/platform-browser": "^4.0.1",
+    "@angular/platform-browser-dynamic": "^4.0.1",
+    "@angular/router": "^4.0.1",
+    "@ngtools/webpack": "^1.3.0",
     "@types/elasticsearch": "^5.0.13",
     "@types/headroom": "^0.7.30",
     "@types/jquery": "^2.0.41",
-    "@types/lodash": "^4.14.55",
+    "@types/lodash": "^4.14.59",
     "@types/materialize-css": "^0.98.0",
     "angular2-materialize": "^6.7.2",
     "angularfire2": "^2.0.0-beta.8",
@@ -40,39 +39,39 @@
     "buffer": "^5.0.5",
     "core-js": "^2.4.1",
     "elasticsearch": "^12.1.3",
-    "firebase": "^3.7.1",
+    "firebase": "^3.7.4",
     "headroom.js": "^0.9.3",
-    "jquery": "^3.1.1",
+    "jquery": "^3.2.1",
     "markdown-to-html-pipe": "^1.2.0",
-    "materialize-css": "^0.98.0",
+    "materialize-css": "^0.98.1",
     "ng2-breadcrumb": "^0.5.6",
-    "ng2-slim-loading-bar": "2.4.0",
+    "ng2-slim-loading-bar": "^2.4.0",
     "reflect-metadata": "^0.1.10",
-    "rxjs": "5.2.0",
-    "serve-favicon": "~2.4.1",
+    "rxjs": "^5.2.0",
+    "serve-favicon": "^2.4.2",
     "showdown": "^1.6.4",
     "to-string-loader": "^1.1.5",
     "ts-helpers": "^1.1.2",
-    "zone.js": "^0.8.1"
+    "zone.js": "^0.8.5"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0-rc.2",
-    "@angular/compiler-cli": "^2.4.9",
-    "@types/core-js": "^0.9.37",
-    "@types/jasmine": "2.5.45",
-    "@types/node": "~7.0.8",
-    "codelyzer": "~3.0.0-beta.3",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "3.2.0",
-    "karma": "1.5.0",
+    "@angular/cli": "^1.0.0",
+    "@angular/compiler-cli": "^4.0.1",
+    "@types/core-js": "^0.9.40",
+    "@types/jasmine": "^2.5.47",
+    "@types/node": "^7.0.12",
+    "codelyzer": "^3.0.0-beta.4",
+    "jasmine-core": "^2.5.2",
+    "jasmine-spec-reporter": "^3.2.0",
+    "karma": "^1.5.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.1.0",
     "karma-remap-istanbul": "^0.6.0",
-    "protractor": "~5.1.1",
-    "ts-node": "2.1.0",
-    "tslint": "^4.5.1",
-    "typescript": "^2.2.1"
+    "protractor": "^5.1.1",
+    "ts-node": "^3.0.2",
+    "tslint": "^5.0.0",
+    "typescript": "^2.2.2"
   },
   "keywords": [
     "SCVO"
