--- a/firebase.json
+++ b/firebase.json
@@ -10,6 +10,13 @@
         "destination": "/index.html"
       }
     ],
+    "redirects": [
+      {
+        "source": "/join-us",
+        "destination": "/services/membership",
+        "type": 301
+      }
+    ],
     "headers": [
       {
         "source": "**/*.@(eot|otf|ttf|ttc|woff|css|js)",
