--- a/package.json
+++ b/package.json
@@ -14,24 +14,24 @@
   "contributors": [
     "Calum MacÙisdean <calum.macuisdean@scvo.org.uk>"
   ],
-  "license": "MIT",
   "dependencies": {
+    "@angular/animations": "^4.0.3",
     "@angular/common": "^4.0.2",
     "@angular/compiler": "^4.0.2",
     "@angular/core": "^4.0.2",
     "@angular/forms": "^4.0.2",
     "@angular/http": "^4.0.2",
+    "@angular/material": "^2.0.0-beta.3",
     "@angular/platform-browser": "^4.0.2",
     "@angular/platform-browser-dynamic": "^4.0.2",
     "@angular/router": "^4.0.2",
+    "@material/toolbar": "^0.2.2",
     "@ngtools/webpack": "^1.3.0",
     "@types/elasticsearch": "^5.0.13",
     "@types/headroom": "^0.7.30",
     "@types/jquery": "^2.0.41",
     "@types/lodash": "^4.14.62",
-    "@types/materialize-css": "^0.98.0",
     "angular2-dynamic-component": "^1.5.1",
-    "angular2-materialize": "^6.7.2",
     "angularfire2": "^2.0.0-beta.8",
     "angulartics2": "^2.2.0",
     "body-parser": "^1.17.1",
@@ -40,10 +40,10 @@
     "deepmerge": "^1.3.2",
     "elasticsearch": "^13.0.0-rc2",
     "firebase": "^3.8.0",
+    "hammerjs": "^2.0.8",
     "headroom.js": "^0.9.3",
     "jquery": "^3.2.1",
     "markdown-to-html-pipe": "^1.2.0",
-    "materialize-css": "^0.98.2",
     "md5": "^2.2.1",
     "ng2-breadcrumb": "^0.5.14",
     "ng2-dnd": "^4.0.2",
@@ -62,6 +62,7 @@
     "@angular/cli": "^1.0.0",
     "@angular/compiler-cli": "^4.0.2",
     "@types/core-js": "^0.9.41",
+    "@types/hammerjs": "^2.0.34",
     "@types/jasmine": "^2.5.47",
     "@types/node": "^7.0.13",
     "codelyzer": "^3.0.0-beta.4",
@@ -75,9 +76,9 @@
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.1.0",
     "karma-remap-istanbul": "^0.6.0",
+    "node-async-require": "https://github.com/jaydenlin/node-async-require/tarball/master",
     "protractor": "^5.1.1",
     "ts-node": "^3.0.2",
-    "node-async-require": "https://github.com/jaydenlin/node-async-require/tarball/master",
     "tslint": "^5.1.0",
     "typescript": "^2.2.2"
   },
