Added Bootstrap & updated services page layout

--- a/fonts/fontello-config.json
+++ b/fonts/fontello-config.json
@@ -1,11 +1,17 @@
 {
-	"name": "28c756dae6d4344d838770bb467d1a74",
+	"name": "8b3094a9c213ec0079ab3286af34412a",
 	"css_prefix_text": "fa-",
 	"css_use_suffix": false,
 	"hinting": true,
 	"units_per_em": 1000,
 	"ascent": 850,
 	"glyphs": [
+		{
+			"uid": "d73eceadda1f594cec0536087539afbf",
+			"css": "heart",
+			"code": 9829,
+			"src": "fontawesome"
+		},
 		{
 			"uid": "381da2c2f7fd51f8de877c044d7f439d",
 			"css": "picture",
@@ -67,6 +73,24 @@
 			"src": "fontawesome"
 		},
 		{
+			"uid": "531bc468eecbb8867d822f1c11f1e039",
+			"css": "calendar",
+			"code": 128197,
+			"src": "fontawesome"
+		},
+		{
+			"uid": "757afacc32d82967975cbb3b45cfb41b",
+			"css": "desktop",
+			"code": 61704,
+			"src": "fontawesome"
+		},
+		{
+			"uid": "500fc1f109021e4b1de4deda2f7ed399",
+			"css": "laptop",
+			"code": 61705,
+			"src": "fontawesome"
+		},
+		{
 			"uid": "02cca871bb69da75e8ee286b7055832c",
 			"css": "bold",
 			"code": 59258,
@@ -115,9 +139,33 @@
 			"src": "fontawesome"
 		},
 		{
+			"uid": "053b757d97042e1c94276200c7b64b91",
+			"css": "briefcase",
+			"code": 128188,
+			"src": "fontawesome"
+		},
+		{
+			"uid": "c819c6225685bae2eed1b8da13e629fa",
+			"css": "list-alt",
+			"code": 59280,
+			"src": "fontawesome"
+		},
+		{
+			"uid": "3d8cc269fdad8a4cda55a20542a84e5c",
+			"css": "credit-card",
+			"code": 128179,
+			"src": "fontawesome"
+		},
+		{
 			"uid": "f4445feb55521283572ee88bc304f928",
 			"css": "floppy",
 			"code": 128190,
+			"src": "fontawesome"
+		},
+		{
+			"uid": "f279f25007794fa6837ff78fe94b216e",
+			"css": "money",
+			"code": 61654,
 			"src": "fontawesome"
 		},
 		{
@@ -130,6 +178,18 @@
 			"uid": "ebc57fa8400e4ede049ac5dc665210e1",
 			"css": "eraser",
 			"code": 61741,
+			"src": "fontawesome"
+		},
+		{
+			"uid": "20fc52f9a88bb7bda023ef209acac095",
+			"css": "graduation-cap",
+			"code": 61853,
+			"src": "fontawesome"
+		},
+		{
+			"uid": "9fecfcfe680a469caedeeb40641a479f",
+			"css": "handshake-o",
+			"code": 62133,
 			"src": "fontawesome"
 		}
 	]
