--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "^4.0.2",
     "@angular/router": "^4.0.2",
     "@material/toolbar": "^0.2.2",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.25",
     "@ngtools/webpack": "^1.3.0",
     "@types/elasticsearch": "^5.0.13",
     "@types/headroom": "^0.7.30",
