Added search box, improved css

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@material/toolbar": "^0.2.2",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.25",
     "@ngtools/webpack": "^1.3.0",
+    "@ngui/auto-complete": "^0.13.2",
     "@types/elasticsearch": "^5.0.13",
     "@types/headroom": "^0.7.30",
     "@types/jquery": "^2.0.41",
