--- a/fonts/fontello-config.json
+++ b/fonts/fontello-config.json
@@ -1,5 +1,5 @@
 {
-	"name": "6999f032525847e82128560e665b42b1",
+	"name": "e55e07f0e89964d661237fa3c26dbad8",
 	"css_prefix_text": "fa-",
 	"css_use_suffix": false,
 	"hinting": true,
@@ -64,12 +64,6 @@
 			"uid": "f48ae54adfb27d8ada53d0fd9e34ee10",
 			"css": "trash-empty",
 			"code": 59177,
-			"src": "fontawesome"
-		},
-		{
-			"uid": "559647a6f430b3aeadbecd67194451dd",
-			"css": "menu",
-			"code": 61641,
 			"src": "fontawesome"
 		},
 		{
@@ -190,6 +184,12 @@
 			"uid": "9fecfcfe680a469caedeeb40641a479f",
 			"css": "handshake-o",
 			"code": 62133,
+			"src": "fontawesome"
+		},
+		{
+			"uid": "3fce1eca43f917c8f23e532749abae5d",
+			"css": "user-circle-o",
+			"code": 62142,
 			"src": "fontawesome"
 		}
 	]
