--- a/package.json
+++ b/package.json
@@ -15,33 +15,32 @@
     "Calum MacÙisdean <calum.macuisdean@scvo.org.uk>"
   ],
   "dependencies": {
-    "@angular/animations": "^4.0.3",
-    "@angular/common": "^4.0.2",
-    "@angular/compiler": "^4.0.2",
-    "@angular/core": "^4.0.2",
-    "@angular/forms": "^4.0.2",
-    "@angular/http": "^4.0.2",
+    "@angular/animations": "^4.1.0",
+    "@angular/common": "4.0.3",
+    "@angular/compiler": "4.0.3",
+    "@angular/core": "4.0.3",
+    "@angular/forms": "4.0.3",
+    "@angular/http": "4.0.3",
     "@angular/material": "^2.0.0-beta.3",
-    "@angular/platform-browser": "^4.0.2",
-    "@angular/platform-browser-dynamic": "^4.0.2",
-    "@angular/router": "^4.0.2",
-    "@material/toolbar": "^0.2.2",
+    "@angular/platform-browser": "4.0.3",
+    "@angular/platform-browser-dynamic": "4.0.3",
+    "@angular/router": "4.0.3",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.25",
-    "@ngtools/webpack": "^1.3.0",
+    "@ngtools/webpack": "1.3.0",
     "@ngui/auto-complete": "^0.13.2",
     "@types/elasticsearch": "^5.0.13",
     "@types/headroom": "^0.7.30",
     "@types/jquery": "^2.0.41",
     "@types/lodash": "^4.14.62",
     "angular2-dynamic-component": "^1.5.1",
-    "angularfire2": "^2.0.0-beta.8",
-    "angulartics2": "^2.2.0",
+    "angularfire2": "2.0.0-beta.8",
+    "angulartics2": "2.2.1",
     "body-parser": "^1.17.1",
     "buffer": "^5.0.6",
     "core-js": "^2.4.1",
     "deepmerge": "^1.3.2",
-    "elasticsearch": "^13.0.0-rc2",
-    "firebase": "^3.8.0",
+    "elasticsearch": "git+https://git@github.com/scvodigital/elasticsearch-js.git",
+    "firebase": "^3.9.0",
     "hammerjs": "^2.0.8",
     "headroom.js": "^0.9.3",
     "jquery": "^3.2.1",
@@ -51,18 +50,18 @@
     "ng2-dnd": "^4.0.2",
     "ng2-slim-loading-bar": "^4.0.0",
     "reflect-metadata": "^0.1.10",
-    "rxjs": "^5.3.0",
+    "rxjs": "5.3.0",
     "serve-favicon": "^2.4.2",
     "showdown": "^1.6.4",
     "simplemde": "^1.11.2",
     "to-string-loader": "^1.1.5",
     "ts-helpers": "^1.1.2",
     "ts-metadata-helper": "0.0.4",
-    "zone.js": "^0.8.5"
+    "zone.js": "0.8.5"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.0",
-    "@angular/compiler-cli": "^4.0.2",
+    "@angular/cli": "1.0.0",
+    "@angular/compiler-cli": "4.0.3",
     "@types/core-js": "^0.9.41",
     "@types/hammerjs": "^2.0.34",
     "@types/jasmine": "^2.5.47",
@@ -82,7 +81,7 @@
     "protractor": "^5.1.1",
     "ts-node": "^3.0.2",
     "tslint": "^5.1.0",
-    "typescript": "^2.2.2"
+    "typescript": "2.2.2"
   },
   "keywords": [
     "SCVO"
