Added Disqus module & test data

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jquery": "^3.2.1",
     "markdown-to-html-pipe": "^1.2.0",
     "md5": "^2.2.1",
+    "ng2-awesome-disqus": "^1.1.1",
     "ng2-breadcrumb": "^0.5.14",
     "ng2-dnd": "^4.0.2",
     "ng2-slim-loading-bar": "^4.0.0",
