--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
     "jquery": "^3.2.1",
     "markdown-to-html-pipe": "^1.2.0",
     "md5": "^2.2.1",
-    "ng2-awesome-disqus": "^1.1.1",
     "ng2-breadcrumb": "^0.5.14",
     "ng2-dnd": "^4.0.2",
     "ng2-slim-loading-bar": "^4.0.0",
+    "ngx-disqus": "^2.0.0",
     "reflect-metadata": "^0.1.10",
     "rxjs": "5.3.0",
     "serve-favicon": "^2.4.2",
