--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "4.0.3",
     "@angular/router": "4.0.3",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.25",
+    "@nglibs/meta": "^0.4.0-rc.1",
     "@ngtools/webpack": "1.3.0",
     "@ngui/auto-complete": "^0.13.2",
     "@types/elasticsearch": "^5.0.13",
