--- a/.gitignore
+++ b/.gitignore
@@ -43,5 +43,6 @@ Thumbs.db
 
 **/*.secrets.*
 
-/src/app/assets/icons
+/src/app/assets/icons/*
+src/app/assets/icons/font/*
 fonts/fontello-config.json
