--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "ng2-dnd": "^4.0.2",
     "ng2-slim-loading-bar": "^4.0.0",
     "ngx-disqus": "^2.0.0",
+    "ngx-sharebuttons": "^3.0.0",
     "reflect-metadata": "^0.1.10",
     "rxjs": "5.3.0",
     "serve-favicon": "^2.4.2",
