--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ node_js:
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - npm install --global typescript firebase-tools @angular/cli
-  - npm install
+  - npm i -g typescript firebase-tools @angular/cli
+  - yarn install
   - echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
 
 script:
