--- a/.gitignore
+++ b/.gitignore
@@ -44,5 +44,5 @@ Thumbs.db
 **/*.secrets.*
 
 /src/app/assets/icons/*
-src/app/assets/icons/font/*
-fonts/fontello-config.json
+/src/app/assets/icons/font/*
+/fonts/fontello-config.json
