Initial mockup of events search with live data

--- a/fonts/fontello-config.json
+++ b/fonts/fontello-config.json
@@ -1,5 +1,5 @@
 {
-	"name": "a33f6c5530cf569419f4afaba803681e",
+	"name": "dbf81debb2537656bd464a7f4b8cdb9f",
 	"css_prefix_text": "fa-",
 	"css_use_suffix": false,
 	"hinting": true,
@@ -37,6 +37,12 @@
 			"src": "fontawesome"
 		},
 		{
+			"uid": "c1f1975c885aa9f3dad7810c53b82074",
+			"css": "lock",
+			"code": 128274,
+			"src": "fontawesome"
+		},
+		{
 			"uid": "c5fd349cbd3d23e4ade333789c29c729",
 			"css": "eye",
 			"code": 59146,
@@ -70,6 +76,12 @@
 			"uid": "531bc468eecbb8867d822f1c11f1e039",
 			"css": "calendar",
 			"code": 128197,
+			"src": "fontawesome"
+		},
+		{
+			"uid": "3a00327e61b997b58518bd43ed83c3df",
+			"css": "login",
+			"code": 59200,
 			"src": "fontawesome"
 		},
 		{
