--- a/fonts/fontello-config.json
+++ b/fonts/fontello-config.json
@@ -1,5 +1,5 @@
 {
-	"name": "de32391d84ab7047a7112bdcb63f1b9c",
+	"name": "117d3d5682b66a3ad0ba109b5ae35eac",
 	"css_prefix_text": "fa-",
 	"css_use_suffix": false,
 	"hinting": true,
@@ -16,6 +16,12 @@
 			"uid": "381da2c2f7fd51f8de877c044d7f439d",
 			"css": "picture",
 			"code": 127748,
+			"src": "fontawesome"
+		},
+		{
+			"uid": "44e04715aecbca7f266a17d5a7863c68",
+			"css": "plus",
+			"code": 43,
 			"src": "fontawesome"
 		},
 		{
