--- a/package.json
+++ b/package.json
@@ -15,76 +15,76 @@
     "Calum MacÙisdean <calum.macuisdean@scvo.org.uk>"
   ],
   "dependencies": {
-    "@angular/animations": "^4.1.0",
-    "@angular/common": "4.0.3",
-    "@angular/compiler": "4.0.3",
-    "@angular/core": "4.0.3",
-    "@angular/forms": "4.0.3",
-    "@angular/http": "4.0.3",
-    "@angular/material": "^2.0.0-beta.3",
-    "@angular/platform-browser": "4.0.3",
-    "@angular/platform-browser-dynamic": "4.0.3",
-    "@angular/router": "4.0.3",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.25",
+    "@angular/animations": "4.1.3",
+    "@angular/common": "4.1.3",
+    "@angular/compiler": "4.1.3",
+    "@angular/core": "4.1.3",
+    "@angular/forms": "4.1.3",
+    "@angular/http": "4.1.3",
+    "@angular/material": "2.0.0-beta.6",
+    "@angular/platform-browser": "4.1.3",
+    "@angular/platform-browser-dynamic": "4.1.3",
+    "@angular/router": "4.1.3",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
     "@nglibs/meta": "^0.4.0-rc.1",
-    "@ngtools/webpack": "1.3.0",
-    "@ngui/auto-complete": "^0.13.2",
+    "@ngtools/webpack": "1.4.0",
+    "@ngui/auto-complete": "^0.13.3",
     "@types/elasticsearch": "^5.0.13",
     "@types/headroom": "^0.7.30",
-    "@types/jquery": "^2.0.41",
-    "@types/lodash": "^4.14.62",
-    "angular2-dynamic-component": "^1.5.1",
-    "angularfire2": "2.0.0-beta.8",
+    "@types/jquery": "^2.0.46",
+    "@types/lodash": "^4.14.65",
+    "angular2-dynamic-component": "^1.6.1",
+    "angularfire2": "^4.0.0-rc.1",
     "angulartics2": "2.2.1",
-    "body-parser": "^1.17.1",
+    "body-parser": "^1.17.2",
     "buffer": "^5.0.6",
     "core-js": "^2.4.1",
     "deepmerge": "^1.3.2",
     "elasticsearch": "git+https://git@github.com/scvodigital/elasticsearch-js.git",
-    "firebase": "^3.9.0",
+    "firebase": "^4.1.1",
     "hammerjs": "^2.0.8",
     "headroom.js": "^0.9.3",
     "jquery": "^3.2.1",
-    "markdown-to-html-pipe": "^1.2.0",
+    "markdown-to-html-pipe": "^1.2.1",
     "md5": "^2.2.1",
     "ng2-breadcrumb": "^0.5.14",
-    "ng2-dnd": "^4.0.2",
+    "ng2-dnd": "^4.1.0",
     "ng2-slim-loading-bar": "^4.0.0",
-    "ngx-disqus": "^2.0.0",
+    "ngx-disqus": "^2.1.1",
     "ngx-sharebuttons": "^3.0.0",
     "reflect-metadata": "^0.1.10",
-    "rxjs": "5.3.0",
-    "serve-favicon": "^2.4.2",
-    "showdown": "^1.6.4",
+    "rxjs": "5.4.0",
+    "serve-favicon": "^2.4.3",
+    "showdown": "^1.7.1",
     "simplemde": "^1.11.2",
     "to-string-loader": "^1.1.5",
     "ts-helpers": "^1.1.2",
     "ts-metadata-helper": "0.0.4",
-    "zone.js": "0.8.5"
+    "zone.js": "0.8.11"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0",
-    "@angular/compiler-cli": "4.0.3",
+    "@angular/cli": "1.1.0",
+    "@angular/compiler-cli": "4.1.3",
     "@types/core-js": "^0.9.41",
     "@types/hammerjs": "^2.0.34",
-    "@types/jasmine": "^2.5.47",
-    "@types/node": "^7.0.13",
-    "codelyzer": "^3.0.0-beta.4",
+    "@types/jasmine": "^2.5.51",
+    "@types/node": "^7.0.27",
+    "codelyzer": "^3.0.1",
     "grunt": "^1.0.1",
     "grunt-exec": "^2.0.0",
     "grunt-fontello": "^0.3.3",
-    "jasmine-core": "^2.5.2",
-    "jasmine-spec-reporter": "^4.0.0",
-    "karma": "^1.6.0",
-    "karma-chrome-launcher": "^2.0.0",
+    "jasmine-core": "^2.6.2",
+    "jasmine-spec-reporter": "^4.1.0",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.1.1",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.1.0",
     "karma-remap-istanbul": "^0.6.0",
     "node-async-require": "https://github.com/jaydenlin/node-async-require/tarball/master",
-    "protractor": "^5.1.1",
-    "ts-node": "^3.0.2",
-    "tslint": "^5.1.0",
-    "typescript": "2.2.2"
+    "protractor": "^5.1.2",
+    "ts-node": "^3.0.4",
+    "tslint": "^5.4.2",
+    "typescript": "2.3.4"
   },
   "keywords": [
     "SCVO"
