--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -2,8 +2,17 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "dependencies": {
-    "firebase-admin": "~4.2.1",
-    "firebase-functions": "^0.5.7"
+    "@google-cloud/storage": "^1.1.1",
+    "firebase-admin": "^4.2.1",
+    "firebase-functions": "^0.5.7",
+    "handlebars": "^4.0.10",
+    "handlebars-helpers": "^0.8.2",
+    "js-crc": "^0.2.0",
+    "node-sass": "^4.5.3"
   },
-  "private": true
+  "private": true,
+  "main": "dist/index.js",
+  "devDependencies": {
+    "@types/node": "^7.0.27"
+  }
 }
