--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -8,7 +8,8 @@
     "handlebars": "^4.0.10",
     "handlebars-helpers": "^0.8.2",
     "js-crc": "^0.2.0",
-    "node-sass": "^4.5.3"
+    "node-sass": "^4.5.3",
+    "request": "^2.81.0"
   },
   "private": true,
   "main": "dist/index.js",
