--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -3,6 +3,7 @@
   "description": "Cloud Functions for Firebase",
   "dependencies": {
     "@google-cloud/storage": "^1.1.1",
+    "cors": "^2.8.3",
     "firebase-admin": "^4.2.1",
     "firebase-functions": "^0.5.7",
     "handlebars": "^4.0.10",
