--- a/package.json
+++ b/package.json
@@ -20,77 +20,82 @@
     "Calum MacÙisdean <calum.macuisdean@scvo.org.uk>"
   ],
   "dependencies": {
-    "@angular/animations": "4.1.3",
-    "@angular/common": "4.1.3",
-    "@angular/compiler": "4.1.3",
-    "@angular/core": "4.1.3",
-    "@angular/forms": "4.1.3",
-    "@angular/http": "4.1.3",
-    "@angular/material": "2.0.0-beta.6",
-    "@angular/platform-browser": "4.1.3",
-    "@angular/platform-browser-dynamic": "4.1.3",
-    "@angular/router": "4.1.3",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
+      "@angular-mdl/core": "^4.0.0",
+      "@angular-mdl/datepicker": "^0.0.2",
+      "@angular-mdl/popover": "^0.6.0",
+      "@angular-mdl/select": "^0.10.1",
+    "@angular/animations": "4.2.5",
+    "@angular/common": "4.2.5",
+    "@angular/compiler": "4.2.5",
+    "@angular/core": "4.2.5",
+    "@angular/forms": "4.2.5",
+    "@angular/http": "4.2.5",
+    "@angular/platform-browser": "4.2.5",
+    "@angular/platform-browser-dynamic": "4.2.5",
+    "@angular/router": "4.2.5",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.27",
     "@nglibs/meta": "^0.4.0-rc.1",
-    "@ngtools/webpack": "1.4.0",
+    "@ngtools/webpack": "1.5.0",
     "@ngui/auto-complete": "^0.13.3",
-    "@types/elasticsearch": "^5.0.13",
+    "@types/elasticsearch": "^5.0.14",
     "@types/headroom": "^0.7.30",
-    "@types/jquery": "^2.0.46",
-    "@types/lodash": "^4.14.65",
+    "@types/jquery": "^3.2.5",
+    "@types/lodash": "^4.14.68",
     "angular2-dynamic-component": "^1.6.1",
+    "angular2-mdl": "^2.13.2",
     "angularfire2": "^4.0.0-rc.1",
-    "angulartics2": "2.2.1",
+    "angulartics2": "2.2.2",
     "body-parser": "^1.17.2",
     "buffer": "^5.0.6",
     "core-js": "^2.4.1",
-    "deepmerge": "^1.3.2",
+    "deepmerge": "^1.4.4",
     "elasticsearch": "git+https://git@github.com/scvodigital/elasticsearch-js.git",
-    "firebase": "^4.1.1",
+    "firebase": "^4.1.3",
     "hammerjs": "^2.0.8",
     "headroom.js": "^0.9.3",
     "jquery": "^3.2.1",
     "markdown-to-html-pipe": "^1.2.1",
+    "material-design-lite": "^1.3.0",
     "md5": "^2.2.1",
     "ng2-breadcrumb": "^0.5.14",
-    "ng2-dnd": "^4.1.0",
+    "ng2-dnd": "^4.2.0",
     "ng2-slim-loading-bar": "^4.0.0",
     "ngx-disqus": "^2.1.1",
     "ngx-sharebuttons": "^3.0.0",
     "node-sass": "^4.5.3",
     "reflect-metadata": "^0.1.10",
-    "rxjs": "5.4.0",
+    "rxjs": "^5",
     "serve-favicon": "^2.4.3",
     "showdown": "^1.7.1",
     "simplemde": "^1.11.2",
     "to-string-loader": "^1.1.5",
     "ts-helpers": "^1.1.2",
     "ts-metadata-helper": "0.0.4",
-    "zone.js": "0.8.11"
+    "zone.js": "0.8.12"
   },
   "devDependencies": {
-    "@angular/cli": "1.1.0",
-    "@angular/compiler-cli": "4.1.3",
-    "@types/core-js": "^0.9.41",
+    "@angular/cli": "1.2.0",
+    "@angular/compiler-cli": "4.2.5",
+    "@types/core-js": "^0.9.42",
     "@types/hammerjs": "^2.0.34",
-    "@types/jasmine": "^2.5.51",
-    "@types/node": "^7.0.27",
-    "codelyzer": "^3.0.1",
+    "@types/jasmine": "^2.5.53",
+    "@types/node": "^8.0.7",
+    "codelyzer": "^3.1.1",
     "grunt": "^1.0.1",
     "grunt-exec": "^2.0.0",
-    "grunt-fontello": "^0.3.3",
-    "jasmine-core": "^2.6.2",
-    "jasmine-spec-reporter": "^4.1.0",
+    "grunt-fontello": "^0.3.4",
+    "jasmine-core": "^2.6.4",
+    "jasmine-spec-reporter": "^4.1.1",
     "karma": "^1.7.0",
-    "karma-chrome-launcher": "^2.1.1",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.1.0",
     "karma-remap-istanbul": "^0.6.0",
     "node-async-require": "https://github.com/jaydenlin/node-async-require/tarball/master",
     "protractor": "^5.1.2",
-    "ts-node": "^3.0.4",
-    "tslint": "^5.4.2",
-    "typescript": "2.3.4"
+    "ts-node": "^3.1.0",
+    "tslint": "^5.4.3",
+    "typescript": "^2.4.1"
   },
   "keywords": [
     "SCVO"
