Removing firestore stuff for now

--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -3,8 +3,9 @@
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "baseUrl": "./",
-    "module": "es2015",
-    "types": []
+    "module": "commonjs",
+    "types": [],
+    "importHelpers": true
   },
   "exclude": [
     "test.ts",
