--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,10 +15,6 @@
       "es2017",
       "dom"
     ],
-    "paths": {
-        "handlebars": [
-            "../node_modules/handlebars/dist/handlebars.js"
-        ]
-    }
+    "paths": {}
   }
 }
