--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "angular2-dynamic-component": "^1.6.1",
     "angularfire2": "^5.0.0-rc.1",
     "core-js": "^2.4.1",
     "firebase": "^4.5.0",
     "readline": "^1.3.0",
     "rxjs": "^5.4.2",
     "scvo-router": "git+https://github.com/scvodigital/scvo-router.git#dev",
+    "ts-metadata-helper": "0.0.4",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
