Changed functions ref to scvo-router to github one

--- a/functions/package.json
+++ b/functions/package.json
@@ -21,6 +21,7 @@
     "node-sass": "^4.5.3",
     "pdfmake": "^0.1.33",
     "request": "^2.83.0",
+    "scvo-router": "git+https://github.com/scvodigital/scvo-router.git#dev",
     "string": "^3.3.3"
   },
   "private": true,
