Updated router to clear pre-loaded content on route-update

--- a/functions/package.json
+++ b/functions/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "cleanup": "rm -rf ./dist",
     "start": "npm run build;firebase serve --only functions",
-    "build": "npm run router;npm run cleanup;npm run deploy-db;tsc",
+    "build": "npm run cleanup;npm run deploy-db;tsc",
     "json2": "node json2 ./test-db/**/*.json2 ./test-db/json; node json2 ./test-db/db.json2 ./test-db",
     "deploy-db": "npm run json2; firebase database:set -y / ./test-db/db.json"
   },
@@ -20,7 +20,7 @@
     "node-sass": "^4.5.3",
     "pdfmake": "^0.1.33",
     "request": "^2.83.0",
-    "scvo-router": "git+https://github.com/scvodigital/scvo-router.git#dev",
+    "scvo-router": "^1.0.0",
     "string": "^3.3.3"
   },
   "private": true,
