--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "firebase": "^4.5.0",
     "readline": "^1.3.0",
     "rxjs": "^5.4.2",
-    "scvo-router": "git+https://github.com/scvodigital/scvo-router.git#dev",
+    "scvo-router": "^1.0.0",
     "ts-metadata-helper": "0.0.4",
     "zone.js": "^0.8.14"
   },
