Minor package config updates

--- a/functions/package.json
+++ b/functions/package.json
@@ -20,13 +20,14 @@
     "node-sass": "^4.5.3",
     "pdfmake": "^0.1.33",
     "request": "^2.83.0",
-    "scvo-router": "^1.0.0",
+    "scvo-router": "^1.0.3",
     "string": "^3.3.3"
   },
   "private": true,
   "main": "dist/index.js",
   "devDependencies": {
     "chalk": "^2.1.0",
-    "dot-object": "^1.7.0"
+    "dot-object": "^1.7.0",
+    "typescript": "^2.5.3"
   }
 }
