--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "serve": "cd ./functions && npm run build && cd ../ && npm run build && firebase serve --only functions,hosting"
+    "serve": "cd ./functions && npm run build && cd ../ && npm run build && firebase serve --only functions,hosting",
+    "deploy": "cd ./functions && npm run build && cd ../ && npm run build && firebase deploy --only functions,hosting"
   },
   "private": true,
   "dependencies": {
@@ -28,7 +29,7 @@
     "firebase": "^4.5.0",
     "readline": "^1.3.0",
     "rxjs": "^5.4.2",
-    "scvo-router": "^1.0.0",
+    "scvo-router": "^1.0.3",
     "ts-metadata-helper": "0.0.4",
     "zone.js": "^0.8.14"
   },
