--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "angular2-dynamic-component": "^1.6.1",
     "angularfire2": "^5.0.0-rc.1",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "firebase": "^4.5.0",
     "readline": "^1.3.0",
     "rxjs": "^5.4.2",
