--- a/functions/package.json
+++ b/functions/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@types/jsdom": "^11.0.2",
     "@types/node-sass": "^3.10.32",
+    "@types/q": "^1.0.5",
+    "@types/request": "^2.0.6",
     "dot-object": "^1.7.0",
     "firebase-admin": "~5.4.0",
     "firebase-functions": "^0.7.1",
@@ -20,8 +22,9 @@
     "moment": "^2.18.1",
     "node-sass": "^4.5.3",
     "pdfmake": "^0.1.33",
+    "q": "^1.5.0",
     "request": "^2.83.0",
-    "scvo-router": "^1.0.8",
+    "scvo-router": "^1.0.9",
     "string": "^3.3.3"
   },
   "private": true,
