Fixed trailing slash issue and a bunch of IE compat

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "rxjs": "^5.4.2",
     "scvo-router": "1.0.41",
     "ts-metadata-helper": "0.0.4",
+    "typedarray": "^0.0.6",
     "uglify-js": "^3.1.9",
     "zone.js": "^0.8.14"
   },
